--- a/MyThesis/Monitor/app/assets/css/common.css
+++ b/MyThesis/Monitor/app/assets/css/common.css
@@ -7,3 +7,12 @@
     top: 0;
     left: 0;
 }
+
+.clickable-element {
+    cursor: pointer;
+}
+
+.leaflet-map {
+    width: 100%;
+    height: 500px;
+}
