--- a/MyThesis/Monitor/app/assets/css/common.css
+++ b/MyThesis/Monitor/app/assets/css/common.css
@@ -16,3 +16,11 @@
     width: 100%;
     height: 500px;
 }
+
+.ship-filter--home {
+    position: absolute;
+    width: 30%;
+    top: 10px;
+    right: 10px;
+    z-index: 10;
+}
