--- a/MyThesis/Monitor/app/assets/css/common.css
+++ b/MyThesis/Monitor/app/assets/css/common.css
@@ -28,3 +28,9 @@
 .section--edit-ship {
     padding-top: 20px;
 }
+
+.ion-icon-custom {
+    font-size: 18px;
+    width: 20px;
+    display: inline-block;
+}
