--- a/MyThesis/Monitor/app/assets/css/common.css
+++ b/MyThesis/Monitor/app/assets/css/common.css
@@ -1,5 +1,14 @@
-﻿.overlay{
-	position: fixed;
+﻿body {
+    background: #244f95;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+}
+
+.body--blue {
+    background: #f5f5f5;
+}
+
+.overlay {
+    position: fixed;
     background: rgba(0, 0, 0, 0.3);
     width: 100vw;
     height: 100vh;
@@ -12,25 +21,16 @@
     cursor: pointer;
 }
 
-.leaflet-map {
-    width: 100%;
-    height: 500px;
+@media (min-width: 1200px) {
+    .container {
+        width: 1280px;
+    }
 }
 
-.ship-filter--home {
-    position: absolute;
-    width: 30%;
-    top: 10px;
-    right: 10px;
-    z-index: 10;
+.small-col{
+    width: 20% !important;
 }
 
-.section--edit-ship {
-    padding-top: 20px;
-}
-
-.ion-icon-custom {
-    font-size: 18px;
-    width: 20px;
-    display: inline-block;
+.big-col{
+    width: 80% !important;
 }
