--- a/MyThesis/Monitor/app/assets/css/main.css
+++ b/MyThesis/Monitor/app/assets/css/main.css
@@ -97,10 +97,15 @@
     text-align: right;
     text-transform: uppercase;
     cursor: pointer;
-    margin-top: 5px;
+    margin-top: 8px;
     margin-right: 10px;
 }
 
 .main__author:hover{
     text-decoration: underline;
+}
+
+.main__detail{
+    min-height:525px;
+    background-color: #dcf0fa;
 }
