--- a/MyThesis/Simulator/app/assets/css/home.css
+++ b/MyThesis/Simulator/app/assets/css/home.css
@@ -74,3 +74,27 @@ body {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+.author {
+    background-color: #244f95;
+    min-height: 30px;
+}
+
+.author__text {
+    font-size: 11px;
+    color: #fff;
+    line-height: 1.2;
+    text-align: right;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-top: 8px;
+    margin-right: 10px;
+}
+
+.author__text:hover {
+    text-decoration: underline;
+}
+
+.ship-info-table tbody, .ship-info-table tbody tr, .ship-info-table tbody td {
+    border: 2px solid #244f95;
+}
