--- a/MyThesis/Monitor/app/assets/css/main.css
+++ b/MyThesis/Monitor/app/assets/css/main.css
@@ -1,9 +1,9 @@
-﻿.main__navbar{
+﻿.main__navbar {
     height: 80px;
 }
 
-.main__navbar__brand{
-    font-size:45px;
+.main__navbar__brand {
+    font-size: 45px;
     color: whitesmoke;
     height: 80px;
     line-height: 80px;
@@ -11,7 +11,7 @@
     margin-left: 10px;
 }
 
-.main__navbar__user{
+.main__navbar__user {
     color: whitesmoke;
     font-size: 16px;
     position: absolute;
@@ -21,35 +21,35 @@
     bottom: 0;
 }
 
-.main__navbar__user__text{
+.main__navbar__user__text {
     margin-right: 5px;
     text-transform: uppercase;
 }
 
-.main__navbar__user__button{
+.main__navbar__user__button {
     color: whitesmoke;
     text-decoration: none;
     cursor: pointer;
 }
 
-.main__navbar__user__button:hover{
-    color: whitesmoke;
-}
+    .main__navbar__user__button:hover {
+        color: whitesmoke;
+    }
 
-.main__menu{
+.main__menu {
     background-color: #f5f5f5;
-    height:40px;
+    height: 40px;
     border-bottom: 1px solid #244f95;
     padding-left: 40px;
     padding-right: 40px;
 }
 
-.main__menu__ul{
+.main__menu__ul {
     height: 40px;
-    margin-bottom:0;
+    margin-bottom: 0;
 }
 
-.main__menu__li{
+.main__menu__li {
     height: 40px;
     line-height: 40px;
     font-size: 16px;
@@ -60,37 +60,37 @@
     margin-left: -5px;
 }
 
-.main__menu__li a{
-    color: #000;
-    cursor: pointer;
-    text-decoration: none;
-}
+    .main__menu__li a {
+        color: #000;
+        cursor: pointer;
+        text-decoration: none;
+    }
 
-.main__menu__li:hover, .main__menu__li--active{
-    border-bottom: 6px solid #244f95;
-}
+    .main__menu__li:hover, .main__menu__li--active {
+        border-bottom: 6px solid #244f95;
+    }
 
-.main__container{
+.main__container {
     background-color: #f5f5f5;
     padding-left: 0;
     padding-right: 0;
 }
 
-.home__warning-title{
+.home__warning-title {
     font-size: 25px;
     color: #000;
     text-align: center;
     margin-top: 10px;
 }
 
-.leaflet-map{
-    height:525px;
+.leaflet-map {
+    height: 525px;
     border-left: 1px solid #244f95;
     margin-left: -15px;
     margin-right: -15px;
 }
 
-.main__author{
+.main__author {
     font-size: 11px;
     color: #fff;
     line-height: 1.2;
@@ -101,11 +101,22 @@
     margin-right: 10px;
 }
 
-.main__author:hover{
-    text-decoration: underline;
+    .main__author:hover {
+        text-decoration: underline;
+    }
+
+.main__detail {
+    min-height: 525px;
+    background-color: #dcf0fa;
 }
 
-.main__detail{
-    min-height:525px;
-    background-color: #dcf0fa;
+.legend label,
+.legend span {
+    display: block;
+    float: left;
+    height: 20px;
+    width: 20%;
+    text-align: center;
+    font-size: 9px;
+    color: #808080;
 }
