--- a/MyThesis/Monitor/app/assets/css/login-page.css
+++ b/MyThesis/Monitor/app/assets/css/login-page.css
@@ -16,6 +16,10 @@
     }
 }
 
+.login-page__logo {
+    height: 80px;
+}
+
 .login-page__form__title {
     color: whitesmoke;
     font-size: 36px;
